crates/options/src/snapshots/caesura_options__option_issue__tests__option_issue_display_cli_argument_invalid.snap
---
source: crates/options/src/option_issue.rs
expression: issue.to_string()
---
Invalid CLI argument
▷ options: SharedOptions
▷ reason: missing required argument

