crates/options/src/snapshots/caesura_options__option_issue__tests__option_issue_display_config_invalid.snap
---
source: crates/options/src/option_issue.rs
expression: issue.to_string()
---
Invalid config
▷ reason: missing field `indexer` at line 3 column 1
