crates/options/src/snapshots/caesura_options__option_issue__tests__option_issue_display_default_changed.snap
---
source: crates/options/src/option_issue.rs
expression: issue.to_string()
---
Default changed
▷ key: output
▷ flag: --output
▷ value: ./output
▷ details: Default changed in v0.27.0.
