crates/options/src/snapshots/caesura_options__option_issue__tests__option_issue_display_dependency_missing.snap
---
source: crates/options/src/option_issue.rs
expression: issue.to_string()
---
Dependency missing
▷ key: upload
▷ flag: --upload
▷ requires key: transcode
▷ requires flag: --transcode
