crates/options/src/snapshots/caesura_options__option_issue__tests__option_issue_display_directory_not_found.snap
---
source: crates/options/src/option_issue.rs
expression: issue.to_string()
---
Directory not found
▷ key: output
▷ flag: --output
▷ path: /no/such/dir
