crates/options/src/snapshots/caesura_options__option_issue__tests__option_issue_display_duration_invalid.snap
---
source: crates/options/src/option_issue.rs
expression: issue.to_string()
---
Invalid duration
▷ key: wait_before_upload
▷ flag: --wait-before-upload
▷ duration: not-a-duration
▷ reason: expected number followed by unit
