crates/options/src/snapshots/caesura_options__option_issue__tests__option_issue_display_file_not_found.snap
---
source: crates/options/src/option_issue.rs
expression: issue.to_string()
---
File not found
▷ key: config
▷ flag: --config
▷ path: /no/such/file.yml
