crates/options/src/snapshots/caesura_options__option_issue__tests__option_issue_display_hash_invalid.snap
---
source: crates/options/src/option_issue.rs
expression: issue.to_string()
---
Invalid hash
▷ key: queue_rm_hash
▷ flag: --queue-rm-hash
▷ hash: zz
▷ reason: invalid hex character
