crates/options/src/snapshots/caesura_options__option_issue__tests__option_issue_display_path_not_found.snap
---
source: crates/options/src/option_issue.rs
expression: issue.to_string()
---
Path not found
▷ key: queue_add_path
▷ flag: --queue-add-path
▷ path: /no/such/path
