crates/options/src/snapshots/caesura_options__option_issue__tests__option_issue_display_required.snap
---
source: crates/options/src/option_issue.rs
expression: issue.to_string()
---
Required
▷ key: indexer_url
▷ flag: --indexer-url
